fixing deprecated code